<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/body_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_dialog_body"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?colorOnSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/accident_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/accident"
            app:layout_constraintTop_toBottomOf="@id/body_textview"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/accident_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accident"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/accident_imageView"
            app:layout_constraintBottom_toBottomOf="@id/accident_imageView"/>

        <ImageView
            android:id="@+id/roadBlock_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/road_block"
            app:layout_constraintTop_toBottomOf="@id/accident_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/road_block_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road_block"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/roadBlock_imageView"
            app:layout_constraintBottom_toBottomOf="@id/roadBlock_imageView"/>

        <ImageView
            android:id="@+id/theft_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/theft"
            app:layout_constraintTop_toBottomOf="@id/roadBlock_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/theft_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theft"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/theft_imageView"
            app:layout_constraintBottom_toBottomOf="@id/theft_imageView"/>

        <ImageView
            android:id="@+id/roadConstruction_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/road_construction"
            app:layout_constraintTop_toBottomOf="@id/theft_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/road_construction_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road_construction"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/roadConstruction_imageView"
            app:layout_constraintBottom_toBottomOf="@id/roadConstruction_imageView"/>

        <ImageView
            android:id="@+id/fire_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/fire"
            app:layout_constraintTop_toBottomOf="@id/roadConstruction_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/fire_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/fire_imageView"
            app:layout_constraintBottom_toBottomOf="@id/fire_imageView"/>

        <ImageView
            android:id="@+id/marker_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/marker"
            app:layout_constraintTop_toBottomOf="@id/fire_imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/other_icon_contentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textColor="?colorOnSecondary"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/marker_imageView"
            app:layout_constraintBottom_toBottomOf="@id/marker_imageView"/>

        <TextView
            android:id="@+id/body2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_dialog_body2"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="?colorOnSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/marker_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toBottomOf="@+id/body2_textview"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
